2015-12-15 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: new lazy MPM bridge with a smoother workload 
    balancing (should work better for low to middle workloads)
    * src/mod_rivet/rivet_worker_mpm.c: improved code comments
    * src/mod_rivet/mod_rivet.c: handling of mpm_bridge configuration parameter.
    New bridge module search method
    * src/mod_rivet/rivet_config.c: new MpmBridge configuration directive

2015-12-13 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: changed in order to have a better handling
    of ::rivet::exit (the call to exit( ) is now carried out from within the
    supervising thread
    * src/mod_rivet/rivet_prefork_mpm.c: Adding exit command handler
    * src/mod_rivet/mod_rivet.c: new central Rivet_Finalize method that calls
    any bridge module finalization. The function deletes the thread key to
    access private data

2015-12-08 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml,asciiglyphs.tcl: adding documentation for ::rivet::try
    and AsciiGlyphs

2015-12-06 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs.tcl: Package HexGlyphs renamed as AsciiGlyphs

2015-12-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/try.tcl: new command ::rivet::try wraps core
    same command to trap ::rivet::abort_code and ::rivet::exit interruptions
    * src/mod_rivet/rivetCore.c: removed semicolons in macro CHECK_REQUEST_REC
    calls
    * rivet/rivet-tcl/catch.tcl: using [uplevel] to control Tcl core [catch] 
    command (as it's been customary with Tcl ever since)

2015-12-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/internals.xml: explaining the MPM bridge jump table
    * doc/rivet.css: changing colors adopting 2.3 style temporarily
    * doc/images: new images with new colors
    * doc/xml/intro.xml,install.xml: removing reference no longer
    valid for version 3.0